--- a/index.jade
+++ b/index.jade
@@ -42,8 +42,11 @@ html
             h1#home SM Hacks
             .slide.scrollme
               h3 San Mateo's first <b>high school</b> hackathon.
-              p.lead September 17-18, 2016 @ <a target='_blank' href='https://goo.gl/maps/H94iydpfHEn'>Opera Mediaworks</a>
-              a.btn.btn-default.btn-lg.scrollme.animateme(data-when='exit' data-from=0 data-to=.5 data-opacity=0 data-translatex=500 data-toggle='modal' data-target='#m') Sign up now!
+              br
+              p.lead SM Hacks has been postponed until further notice.
+              br
+              p To stay updated, please #[a(target='_blank' href='#update') subscribe]!
+              // a.btn.btn-default.btn-lg.scrollme.animateme(data-when='exit' data-from=0 data-to=.5 data-opacity=0 data-translatex=500 data-toggle='modal' data-target='#m') Sign up now!
               br
               br
               br
@@ -58,7 +61,7 @@ html
       #collapse.collapse.navbar-collapse
         ul.nav.navbar-nav.navbar-right
           li: a(href='#faq') FAQ
-          li: a(href='#schedule') Schedule
+          //li: a(href='#schedule') Schedule
           li: a(href='#sponsors') Sponsors
           li: a(href='#partners') Partners
           li: a(href='#team') Team
@@ -74,7 +77,7 @@ html
           .row.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=1000)
             .col-sm-4
               h3 What is SM Hacks?
-              p SM Hacks is a 200-person hackathon that will gather the innovators of tomorrow into an amazing experience. SM Hacks 2016 will be hosted at #[a(target='_blank' href='https://goo.gl/maps/H94iydpfHEn') Opera Mediaworks], in San Mateo.
+              p SM Hacks is a 200-person hackathon that will gather the innovators of tomorrow into an amazing experience.
             .col-sm-4
               h3 What is a hackathon?
               p A hackathon is a 24-hour programming marathon where your ideas come to life. Over the course of the weekend, students from all backgrounds and all skill levels collaborate in teams of up to four to build something awesome.
@@ -84,7 +87,7 @@ html
           .row.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=1000)
             .col-sm-4
               h3 Do I have to be in high school?
-              p Yes, only current high school students will be able to attend. Unfortunately, we are not accepting middle school students. However, college students are welcome to help out. To mentor or lead a workshop, click #[a(target='_blank' href='https://smhacks.typeform.com/to/avpXre') here] or email #[a(target='_blank' href='mailto:volunteer@smhacks.com') volunteer@smhacks.com] for more details.
+              p Yes, only current high school students will be able to attend. Unfortunately, we are not accepting middle school students. However, college students are welcome to help out. To mentor or lead a workshop, email #[a(target='_blank' href='mailto:volunteer@smhacks.com') volunteer@smhacks.com] for more details.
             .col-sm-4
               h3 What if I don't have a team or an idea?
               p No worries! It is not uncommon for people to come into the hackathon without an already-formed group, but we'll make sure you're matched with the right people. We will have a team formation and ideation session the first night so everyone can find the perfect team and come up with awesome ideas, so don't you worry first-time hackers!
@@ -100,11 +103,11 @@ html
               p Nothing! Just bring your beautiful self and ideas and we will provide you with the food, Wi-Fi, workspace, and swag!
             .col-sm-4
               h3 How can I apply?
-              p Just fill out #[a(target='_blank' href='https://smhacks.typeform.com/to/XokTDO') this form]! Applications close Friday, September 9 but will be processed on a rolling basis. Make sure to #[a(href='#update') subscribe], follow us on #[a(target='blank' href='https://twitter.com/sanmateohacks') Twitter], and like us on #[a(target='blank' href='https://facebook.com/sanmateohacks') Facebook] for the latest updates!
+              p SM Hacks has been postponed until further notice. Be sure to #[a(href='#update') subscribe] for the latest updates!
           .row.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=1000)
             .col-sm-4
               h3 What is the schedule like?
-              p It will be from Saturday, September 17 through Sunday, September 18, 2016. Be sure to check back for a more specific schedule, but don't worry! There will be plenty of fun activities that will keep you entertained.
+              p SM Hacks has been postponed until further notice and a more specific schedule will be posted later! There will be plenty of fun activities that will keep you entertained.
             .col-sm-4
               h3 Will there be travel reimbursements?
               p Unfortunately, we will not be offering travel reimbursements this year. Please email us at #[a(href='mailto:hi@smhacks.com') hi@smhacks.com] for additional details.
@@ -112,7 +115,7 @@ html
               h3 What if I have another question?
               p Email us at #[a(href='mailto:hi@smhacks.com') hi@smhacks.com] if you have additional questions. Please email questions about mentoring or leading workshops to #[a(href='mailto:volunteer@smhacks.com') volunteer@smhacks.com] and sponsorship questions to #[a(href='mailto:sponsors@smhacks.com') sponsors@smhacks.com]. We are always happy to help!
           hr
-        #schedule.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatex=-1000)
+        //#schedule.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatex=-1000)
           h2.text-center Schedule
           p.lead Hacking is from noon to noon.
           .row.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-translatey=1000)
@@ -352,7 +355,7 @@ html
                     i.fa.fa-facebook-square.fa-3x
                   a.btn.btn-info(href='https://twitter.com/sanmateohacks' target='_blank' style='background-color:transparent; border:none; display:inline-block')
                     i.fa.fa-twitter-square.fa-3x
-    .modal.fade#m(tabindex="-1" role="dialog")
+    //.modal.fade#m(tabindex="-1" role="dialog")
       .modal-dialog
         .modal-content
           .modal-header
