--- a/index.jade
+++ b/index.jade
@@ -3,10 +3,8 @@ doctype html
 html
   head
     script(src='https://cdnjs.cloudflare.com/ajax/libs/headjs/1.0.3/head.load.min.js')
-    link(rel='shortcut icon' href='logo_2.0_solo.png' type='image/png')
     meta(name='mobile-web-app-capable' content='yes')
     meta(name='apple-mobile-web-app-capable' content='yes')
-    link(rel='apple-touch-icon' href='logo_2.0_solo.png')
     meta(name='apple-mobile-web-app-status-bar-style' content='black-translucent')
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
@@ -18,7 +16,6 @@ html
     meta(property='og:site_name' content='SM Hacks')
     meta(property='og:title' content='SM Hacks')
     meta(property='og:description' content="San Mateo's first high school hackathon.")
-    meta(property='og:image' content='logo_2.0_solo.png')
     meta(property='og:url' content="http://smhacks.com")
     title SM Hacks
     link(rel='stylesheet prefetch' href='bootstrap.css')
@@ -31,9 +28,6 @@ html
     script.
       head.load('https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js','https://code.jquery.com/color/jquery.color.plus-names-2.1.2.min.js','https://rawgit.com/camwiegert/baffle/master/dist/baffle.min.js','https://rawgit.com/nckprsn/scrollme/master/jquery.scrollme.min.js','https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js','main.js')
   body
-    .loading
-      img#logo(src='logo_2.0_solo.svg')
-      .circle
     .bg.change
     .cover
       .container.text-center
@@ -146,7 +140,7 @@ html
           .row
             .col-sm-12.text-center
               p.lead We will be announcing our full list of awesome sponsors soon! Want to get involved?
-              a.btn.btn-primary.btn-lg.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=200 href='sponsor.pdf' target='_blank') Get the Sponsorship Packet!
+              a.btn.btn-primary.btn-lg.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=200 href='mailto:sponsors@smhacks.com' target='_blank') Send us an email!
           br
           br
           br
@@ -339,8 +333,6 @@ html
         footer.footer.scrollme.animateme(data-when='enter' data-from=1 data-to=0 data-translatex=1000)
           .container
             .row
-              .col-sm-1.col-xs-6.text-center
-                img(src='logo_2.0_solo.svg')
               .col-sm-7.hidden-xs
                 p.text-muted Made with <i class='fa fa-heart' style='color:#ff7242'></i> by SM Hacks.
               .col-sm-2.hidden-xs
