--- a/index.jade
+++ b/index.jade
@@ -145,9 +145,12 @@ html
           br
           br
           .row.text-center.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=1000)
-            .col-sm-12
+            .col-sm-6
               a(href='http://sie.com/en/index.html' target='_blank')
                 img(src='sony.png' id='sony')
+            .col-sm-6
+              a(href='#/' target='_blank')
+                img(src='google.png' id='google')
           .row.text-center.text-center.scrollme.animateme(data-when='enter' data-from=.5 data-to=0 data-opacity=0 data-translatey=1000)
             .col-sm-6
               a(href='http://smule.com/' target='_blank')
