--- a/style.css
+++ b/style.css
@@ -168,6 +168,10 @@ canvas{
   width:100%;
   margin-top:9%;
 }
+#google{
+  width:100%;
+  margin-top:9%;
+}
 #smule{
   width:75%;
   margin-top:-15%;
