--- a/index.jade
+++ b/index.jade
@@ -339,7 +339,7 @@ html
             h3
               a.btn.btn-default(href='https://smhacks.typeform.com/to/SZPVdt' target='_blank') Hacker
               |  or 
-              a.btn.btn-default(disabled=true) Mentor (Coming soon!)
+              a.btn.btn-default(href='https://smhacks.typeform.com/to/XCtApy' target='_blank') Mentor
               |?
           .modal-footer
             button.btn.btn-primary(data-dismiss='modal') Cancel
