--- a/index.jade
+++ b/index.jade
@@ -108,8 +108,8 @@ html
             h3 Saturday, Jan. 14
             ul.list-unstyled
               li <b>10:00 AM</b> - Mentor/Sponsors Check In
-              li <b>11:00 AM</b> - Hacker Check In
-              li <b>12:00 PM</b> - Opening Ceremony 
+              li <b>10:30 AM</b> - Hacker Check In
+              li <b>11:30 AM</b> - Opening Ceremony 
               li <b>12:30 PM</b> - Hacking Starts
               li <b>12:30 PM</b> - Team-mixer
               li <b>12:30 PM</b> - Lunch 
@@ -133,59 +133,94 @@ html
             a.btn.btn-primary.btn-lg(href='sponsor.pdf' target='_blank') Sponsorship Packet
         .row.text-center
           .col-sm-6
-            a(href='http://sie.com/en' target='_blank')
-              img(src='sony.png' id='sony')
+            a(href='https://www.informatica.com/' target='_blank')
+              img(src='informatica.png' id='informatica' class='sp')
           .col-sm-6
             a(href='https://google.com' target='_blank')
-              img(src='google.png' id='google')
+              img(src='google.png' id='google' class='sp') 
         .row.text-center.text-center
           .col-sm-6
+            a(href='http://sie.com/en' target='_blank')
+              img(src='playstation.png' id='sony' class='sp')
+          .col-sm-6
             a(href='http://smule.com/' target='_blank')
-              img(src='smule.png' id='smule')
+              img(src='smule.png' id='smule' class='sp')
+        .row.text-center.text-center
+          .col-sm-6
+            a(href='http://www.brandmakers.com/' target='_blank')
+              img(src='brandmakers.png' id='brandmakers' class='sp')
           .col-sm-6
             a(href='https://ibm.com/' target='_blank')
-              img(src='ibm.png' id='ibm')
+              img(src='ibm.png' id='ibm' class='sp')
             br
             small(style='font-size:8px') IBM and the IBM logo are trademarks of International Business Machines Corp., registered in many jurisdictions worldwide.
         .row.text-center.text-center
           .col-sm-4
             a(href='http://justinmind.com' target='_blank')
-              img(src='justinmind.png' id='justinmind')
+              img(src='justinmind.png' id='justinmind' class='sp')
           .col-sm-4
             a(href='http://mitlaunch.com/' target='_blank')
-              img(src='mit-launch.png' id='mit-launch')
+              img(src='mit-launch.png' id='mit-launch' class='sp')
           .col-sm-4
             a(href='http://mlworks.com' target='_blank')
-              img(src='mlw.png' id='mlw')
+              img(src='mlw.png' id='mlw' class='sp')
+        br
+        br
         br
         br
         .row.text-center.text-center
           .col-sm-4
             a(href='http://balsamiq.com/' target='_blank')
-              img(src='balsamiq.png' id='balsamiq')
+              img(src='balsamiq.png' id='balsamiq' class='sp')
           .col-sm-4
             a(href='http://wolfram.com/' target='_blank')
-              img(src='wolfram.png' id='wolfram')
+              img(src='wolfram.png' id='wolfram' class='sp')
           .col-sm-4
             a(href='http://vilynx.com/' target='_blank')
-              img(src='vilynx.png' id='vilynx')
+              img(src='vilynx.png' id='vilynx' class='sp')
+        br
+        br
+        br
+        .row.text-center.text-center
+          .col-sm-4
+            a(href='https://www.makeschool.com/' target='_blank')
+              img(src='makeschool.png' id='makeschool' class='sp')
+          .col-sm-4
+            a(href='https://www.marketo.com/' target='_blank')
+              img(src='marketo.png' id='marketo' class='sp')
+          .col-sm-4
+            a(href='http://www.dual-aperture.com/' target='_blank')
+              img(src='dualaperture.png' id='dualaperture' class='sp')
+        br
+        br
+        br
+        .row.text-center
+          .col-md-3.col-sm-6
+            a(href='https://github.com/' target='_blank')
+              img(src='github.png' id='github' class='sp')
+          .col-md-3.col-sm-6
+            a(href='http://lattice-engines.com/' target='_blank')
+              img(src='lattice.png' id='lattice' class='sp')
+          .col-md-3.col-sm-6
+            a(href='http://a16z.com/' target='_blank')
+              img(src='a16z.png' id='a16z' class='sp')
+          .col-md-3.col-sm-6
+            a(href='http://get.tech/' target='_blank')
+              img(src='tech.png' id='tech' class='sp')
         br
         br
         br
         h2.text-center Partners
         .row.text-center
-          .col-md-3.col-sm-6
+          .col-sm-4.col-sm-4
             a(href='https://hackclub.com' target='_blank')
-              img(src='hackclub.png' id='hackclub')
-          .col-md-3.col-sm-6
+              img(src='hackclub.png' id='hackclub' class='sp')
+          .col-sm-4
             a(href='http://streameducation.org' target='_blank')
-              img(src='stream.png' id='stream')
-          .col-md-3.col-sm-6
-            a(href='https://hackerearth.com/' target='_blank')
-              img(src='hackerearth.png' id='hackerearth')
-          .col-md-3.col-sm-6
+              img(src='stream.png' id='stream' class='sp')
+          .col-sm-4
             a(href='http://www.hacker.fund/' target='_blank')
-              img(src='hackerfund.png' id='hackerfund')
+              img(src='hackerfund.png' id='hackerfund' class='sp')
     #team.content
       .container
         h2.text-center SM Hacks Team
@@ -196,13 +231,13 @@ html
               .name Samuel Escapa
               .role Sponsorship Director
               .social
-                a(href='http://saescapa.me' target='_blank')
+                a(href='http://saescapa.tech' target='_blank')
                   i.fa.fa-globe
-                a(href='http://twitter.saescapa.me' target='_blank')
+                a(href='http://twitter.saescapa.tech' target='_blank')
                   i.fa.fa-twitter
-                a(href='http://linkedin.saescapa.me' target='_blank')
+                a(href='http://linkedin.saescapa.tech' target='_blank')
                   i.fa.fa-linkedin
-                a(href='http://github.saescapa.me' target='_blank')
+                a(href='http://github.saescapa.tech' target='_blank')
                   i.fa.fa-github
           .col-sm-3
             .member.kevinf
