--- a/index.jade
+++ b/index.jade
@@ -145,6 +145,8 @@ html
           .col-sm-6
             a(href='http://smule.com/' target='_blank')
               img(src='smule.png' id='smule' class='sp')
+        br
+        br
         .row.text-center.text-center
           .col-sm-6
             a(href='http://www.brandmakers.com/' target='_blank')
@@ -154,6 +156,17 @@ html
               img(src='ibm.png' id='ibm' class='sp')
             br
             small(style='font-size:8px') IBM and the IBM logo are trademarks of International Business Machines Corp., registered in many jurisdictions worldwide.
+        br
+        br
+        .row.text-center.text-center
+          .col-sm-6
+            a(href='https://www.pubnub.com/' target='_blank')
+              img(src='pubnub.png' id='pubnub' class='sp')
+          .col-sm-6
+            a(href='https://www.twilio.com/' target='_blank')
+              img(src='twilio.png' id='twilio' class='sp')
+        br
+        br
         .row.text-center.text-center
           .col-sm-4
             a(href='http://justinmind.com' target='_blank')
