--- a/index.jade
+++ b/index.jade
@@ -199,11 +199,11 @@ html
             a(href='https://www.makeschool.com/' target='_blank')
               img(src='makeschool.png' id='makeschool' class='sp')
           .col-sm-4
+            a(href='http://www.dual-aperture.com/' target='_blank')
+              img(src='scenera.png' id='scenera' class='sp')
+          .col-sm-4
             a(href='https://www.marketo.com/' target='_blank')
               img(src='marketo.png' id='marketo' class='sp')
-          .col-sm-4
-            a(href='http://www.dual-aperture.com/' target='_blank')
-              img(src='dualaperture.png' id='dualaperture' class='sp')
         br
         br
         br
