--- a/style.css
+++ b/style.css
@@ -191,15 +191,16 @@ canvas{
 }
 #makeschool{
   width:100%;
-  margin-top:5%;
+  margin-top:15%;
 }
 #marketo{
   width:100%;
-  margin-top:-12%;
+  margin-top:-2%;
+
 }
-#dualaperture{
-  width:100%;
-  margin-top:10%;
+#scenera{
+  width:85%;
+  margin-top:-5%;
 }
 #github{
   width:100%;
