--- a/index.jade
+++ b/index.jade
@@ -18,7 +18,7 @@ html
     meta(property='og:site_name' content='SM Hacks')
     meta(property='og:title' content='SM Hacks')
     meta(property='og:description' content="San Mateo's first high school hackathon.")
-    meta(property='og:image' content='logo.png')
+    meta(property='og:image' content='cover.png')
     meta(property='og:url' content="http://smhacks.com")
     title SM Hacks
     link(rel='stylesheet prefetch' href='bootstrap.css')
@@ -54,7 +54,6 @@ html
           li: a(href='#schedule') Schedule
           li: a(href='#sponsors') Sponsors / Partners
           li: a(href='#team') Team
-          li: a(href='#update') Subscribe
     #faq.content
       .container
         h2.text-center FAQ
@@ -67,7 +66,7 @@ html
             p A hackathon is a 24-hour programming marathon where your ideas come to life. Over the course of the weekend, students from all backgrounds and all skill levels collaborate in teams of up to four to build something awesome.
           .col-sm-4
             h3 What if I don't know how to code?
-            p No worries! SM Hacks is the perfect time to learn how to code and all students, regardless of skill level and experience, are welcome. There will be plenty of mentors on hand glad to answer any and all questions and workshops specifically designed for those with no prior experience. #[a(href='#update') Stay tuned] for more information about workshops!
+            p No worries! SM Hacks is the perfect time to learn how to code and all students, regardless of skill level and experience, are welcome. There will be plenty of mentors on hand glad to answer any and all questions and workshops specifically designed for those with no prior experience. Stay tuned for more information about workshops!
         .row
           .col-sm-4
             h3 Do I have to be in high school?
@@ -87,7 +86,7 @@ html
             p Nothing! Just bring your beautiful self and ideas and we will provide you with the food, Wi-Fi, workspace, and swag!
           .col-sm-4
             h3 How can I apply?
-            p For attendees, just fill out #[a(href='https://smhacks.typeform.com/to/SZPVdt') this form]. Mentors, be sure to #[a(href='#update') subscribe] for the latest updates!
+            p For attendees, just fill out #[a(href='https://smhacks.typeform.com/to/SZPVdt') this form]. Mentors, fill out #[a(href='https://smhacks.typeform.com/to/XCtApy') this form] for the latest updates!
         .row
           .col-sm-4
             h3 What is the schedule like?
@@ -110,9 +109,12 @@ html
               li <b>10:00 AM</b> - Mentor/Sponsors Check In
               li <b>10:30 AM</b> - Hacker Check In
               li <b>11:30 AM</b> - Opening Ceremony 
-              li <b>12:30 PM</b> - Hacking Starts
-              li <b>12:30 PM</b> - Team-mixer
-              li <b>12:30 PM</b> - Lunch 
+              li <b>12:00 PM</b> - Hacking Starts
+              li <b>12:00 PM</b> - Team-mixer
+              li <b>12:00 PM</b> - Lunch
+              li <b>1:00 PM</b> - Intro to iOS Workshop
+              li <b>2:30 PM</b> - Intermediate iOS Workshop
+              li <b>3:00 PM</b> - Intro to Git Workshop
               li <b>6:30 PM</b> - Dinner
           .col-sm-5.text-center
             h3 Sunday, Jan. 15
@@ -121,7 +123,7 @@ html
               li <b>8:00 AM</b> - Breakfast 
               li <b>11AM to 12 PM</b> - Submissions
               li <b>12:00 PM</b> - Hacking Ends
-              li <b>11 AM to 11:45 AM</b> - Lunch 
+              li <b>12:00 PM</b> - Lunch 
               li <b>12:30 PM to 1:15 PM</b> - Judging Expo
               li <b>1:45 PM</b> - Closing Ceremony
     #sponsors.content
@@ -349,7 +351,7 @@ html
                   i.fa.fa-reddit
                 a(href='http://molarmanful.com' target='_blank')
                   i.fa.fa-globe
-    #update.content
+    //#update.content
       .container
         h2.text-center Subscribe
         .row
