--- a/index.jade
+++ b/index.jade
@@ -18,8 +18,9 @@ html
     meta(property='og:site_name' content='SM Hacks')
     meta(property='og:title' content='SM Hacks')
     meta(property='og:description' content="San Mateo's first high school hackathon.")
-    meta(property='og:image' content='cover.png')
-    meta(property='og:url' content="http://smhacks.com")
+    meta(property='og:image' content='http://www.smhacks.com/social-media-logo.png')
+    meta(property='og:url' content="http://www.smhacks.com")
+    meta(property='twitter:image' content='http://www.smhacks.com/social-media-logo.png')
     title SM Hacks
     link(rel='stylesheet prefetch' href='bootstrap.css')
     link(rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css')
@@ -121,6 +122,7 @@ html
             ul.list-unstyled
               li <b>12:00 AM</b> - Midnight Snack
               li <b>8:00 AM</b> - Breakfast 
+              li <b>9:00 AM</b> — Realtime Data Visualization Workshop
               li <b>11AM to 12 PM</b> - Submissions
               li <b>12:00 PM</b> - Hacking Ends
               li <b>12:00 PM</b> - Lunch 
@@ -138,7 +140,7 @@ html
             a(href='https://www.informatica.com/' target='_blank')
               img(src='informatica.png' id='informatica' class='sp')
           .col-sm-6
-            a(href='https://google.com' target='_blank')
+            a(href='https://developers.google.com/' target='_blank')
               img(src='google.png' id='google' class='sp') 
         .row.text-center.text-center
           .col-sm-6
