--- a/index.jade
+++ b/index.jade
@@ -41,6 +41,9 @@ html
               h3 San Mateo's first <b>high school</b> hackathon!
               p.lead January 14-15, 2017 @ <a href='https://www.google.com/maps/place/Informatica+Corporation/@37.5111227,-122.2051784,15z/data=!4m5!3m4!1s0x0:0xc479e59839708591!8m2!3d37.5111227!4d-122.2051784' target='_blank'>Informatica</a>
               a.btn.btn-default.btn-lg(data-toggle='modal' data-target='#m') Sign up now!
+              br
+              br
+              p Applications close January 12, 2017
             
     nav.navbar.navbar-default.navbar-fixed-bottom
       .navbar-header
@@ -87,7 +90,7 @@ html
             p Nothing! Just bring your beautiful self and ideas and we will provide you with the food, Wi-Fi, workspace, and swag!
           .col-sm-4
             h3 How can I apply?
-            p For attendees, just fill out #[a(href='https://smhacks.typeform.com/to/SZPVdt') this form]. Mentors, fill out #[a(href='https://smhacks.typeform.com/to/XCtApy') this form] for the latest updates!
+            p For attendees, just fill out #[a(href='https://smhacks.typeform.com/to/SZPVdt') this form]. Applications close Jan. 12, 2017. Mentors, fill out #[a(href='https://smhacks.typeform.com/to/XCtApy') this form] for the latest updates!
         .row
           .col-sm-4
             h3 What is the schedule like?
