--- a/index.jade
+++ b/index.jade
@@ -26,9 +26,7 @@ html
     link(rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css')
     link(rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Quicksand')
     link(rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Cabin:400,700')
-    link(rel='stylesheet prefetch' href='style.css')
-    noscript
-      link(rel='stylesheet prefetch' href='noscript.css')
+    link(rel='stylesheet prefetch' href='style.min.css')
     script.
       head.load('https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js','https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js','main.js')
   body
@@ -84,7 +82,7 @@ html
         .row
           .col-sm-4
             h3 What should I bring?
-            p Attendees should bring a valid student ID or some other form of identification, as well as a signed and completed waiver. Bring laptops and chargers, along with any other technology that you may want to use! We will have designated sleeping spots so feel free to bring a sleeping bag and pillow. Also it is highly suggested that you bring toiletries so you can feel refreshed and beautiful!
+            p Attendees should bring a valid student ID or some other form of identification. ALL attendees must have completed a signed #[a(href='https://www.hellosign.com/s/bf714f6b') waiver] online. Bring laptops and chargers, along with any other technology that you may want to use! We will have designated sleeping spots so feel free to bring a sleeping bag and pillow. Also it is highly suggested that you bring toiletries so you can feel refreshed and beautiful!
           .col-sm-4
             h3 How much does it cost to attend?
             p Nothing! Just bring your beautiful self and ideas and we will provide you with the food, Wi-Fi, workspace, and swag!
@@ -117,7 +115,7 @@ html
               li <b>12:00 PM</b> - Team-mixer
               li <b>12:00 PM</b> - Lunch
               li <b>1:00 PM</b> - Intro to iOS Workshop
-              li <b>2:30 PM</b> - Intermediate iOS Workshop
+              li <b>2:00 PM</b> - Intermediate iOS Workshop
               li <b>3:00 PM</b> - Intro to Git Workshop
               li <b>6:30 PM</b> - Dinner
           .col-sm-5.text-center
