--- a/index.jade
+++ b/index.jade
@@ -107,28 +107,72 @@ html
           .col-sm-1.hidden-xs
           .col-sm-5.text-center
             h3 Saturday, Jan. 14
-            ul.list-unstyled
-              li <b>10:00 AM</b> - Mentor/Sponsors Check In
-              li <b>10:30 AM</b> - Hacker Check In
-              li <b>11:30 AM</b> - Opening Ceremony 
-              li <b>12:00 PM</b> - Hacking Starts
-              li <b>12:00 PM</b> - Team-mixer
-              li <b>12:00 PM</b> - Lunch
-              li <b>1:00 PM</b> - Intro to iOS Workshop
-              li <b>2:00 PM</b> - Intermediate iOS Workshop
-              li <b>3:00 PM</b> - Intro to Git Workshop
-              li <b>6:30 PM</b> - Dinner
+            table.table.table-condensed
+              tbody
+                tr
+                  td 10:00 AM
+                  td Mentor/Sponsors Check In
+                tr
+                  td 10:30 AM
+                  td Hacker Check In
+                tr
+                  td 11:15 AM
+                  td Opening Ceremony
+                tr
+                  td 12:00 PM
+                  td Hacking Starts
+                tr
+                  td 12:00 PM
+                  td Team Mixer
+                tr
+                  td 12:00 PM
+                  td Lunch
+                tr
+                  td 1:00 PM
+                  td Intro to iOS Workshop
+                tr
+                  td 2:00 PM
+                  td Intermediate iOS Workshop
+                tr
+                  td 2:00 PM
+                  td Particle Workshop
+                tr
+                  td 3:00 PM
+                  td Intro to Git Workshop
+                tr
+                  td 6:30 PM
+                  td Dinner
+                tr
+                  td 9:00 PM
+                  td Cup Stacking Tournament
           .col-sm-5.text-center
             h3 Sunday, Jan. 15
-            ul.list-unstyled
-              li <b>12:00 AM</b> - Midnight Snack
-              li <b>8:00 AM</b> - Breakfast 
-              li <b>9:00 AM</b> — Realtime Data Visualization Workshop
-              li <b>11AM to 12 PM</b> - Submissions
-              li <b>12:00 PM</b> - Hacking Ends
-              li <b>12:00 PM</b> - Lunch 
-              li <b>12:30 PM to 1:15 PM</b> - Judging Expo
-              li <b>1:45 PM</b> - Closing Ceremony
+            table.table.table-condensed
+              tbody
+                tr
+                  td 12:00 AM
+                  td Midnight Snack
+                tr
+                  td 8:00 AM
+                  td Breakfast
+                tr
+                  td 9:00 AM
+                  td Realtime Data Visualization Workshop
+                tr
+                  td 11:00 AM - 12:00 PM
+                  td #[a(href='https://smhacks.devpost.com/') Project Submissions]
+                tr
+                  td 12:00 PM
+                  td Hacking Ends
+                tr
+                  td 12:00 PM
+                  td Lunch
+                tr
+                  td 12:30 PM - 1:15 PM
+                  td Judging and Demos
+                tr
+                  td 1:45 PM
+                  td Closing Ceremony
     #sponsors.content
       .container
         h2.text-center Sponsors
@@ -180,8 +224,8 @@ html
             a(href='http://mitlaunch.com/' target='_blank')
               img(src='mit-launch.png' id='mit-launch' class='sp')
           .col-sm-4
-            a(href='http://mlworks.com' target='_blank')
-              img(src='mlw.png' id='mlw' class='sp')
+            a(href='http://upsurf.com' target='_blank')
+              img(src='upsurf.png' id='upsurf' class='sp')
         br
         br
         br
@@ -227,6 +271,14 @@ html
               img(src='tech.png' id='tech' class='sp')
         br
         br
+        .row.text-center
+          .col-md-3.col-sm-6
+          .col-md-3.col-sm-6
+            a(href='https://www.stickermule.com/' target='_blank')
+              img(src='stickermule.png' id='stickermule' class='sp')
+          .col-md-3.col-sm-6
+            a(href='https://www.particle.io/' target='_blank')
+              img(src='particle.png' id='particle' class='sp')
         br
         h2.text-center Partners
         .row.text-center
